--- a/car_collection/authentication/auth_templates/signin.html
+++ b/car_collection/authentication/auth_templates/signin.html
@@ -4,4 +4,13 @@
 
     <h1>Sign In Here</h1>
 
+    <main class="container">
+        <div class="row">
+            <aside class="col-12 col-md-6">
+                <h2>Sign Into Your Account</h2>
+                {% include 'form.html' %}  
+            </aside>
+        </div>
+    </main>
+
 {% endblock content %}
